--- a/index.html
+++ b/index.html
@@ -5,11 +5,12 @@
       <meta name="viewport" content="width=device-width, initial-scale=1.0">
       <title>Supply Mission</title>
       <style> body {padding: 0; margin: 0;} </style>
+      <script src="p5.sound.js"></script>
       <script src="matter.js"></script>
       <script src="p5.js"></script>
       <script src="p5.play.js"></script>
-
       <script src="sketch.js"></script>
+      <script src="Log.js"></script>
 
     </head>
     <body>
